New sorting implemented