@@ -2,8 +2,8 @@ package com.soft.storecore.facade.impl;
 
 import com.soft.storecore.core.product.entity.Product;
 import com.soft.storecore.core.product.service.ProductService;
-import com.soft.storecore.core.sorting.SortingService;
-import com.soft.storecore.core.sorting.pojo.SortingData;
+import com.soft.storecore.core.sorting.entity.Sorting;
+import com.soft.storecore.core.sorting.service.SortingService;
 import com.soft.storecore.facade.product.converter.ProductConverter;
 import com.soft.storecore.facade.product.data.ProductData;
 import com.soft.storecore.facade.product.facade.DefaultProductFacade;
@@ -13,17 +13,18 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
-import static org.junit.Assert.assertArrayEquals;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.when;
 
 @RunWith(MockitoJUnitRunner.class)
 public class DefaultProductFacadeTest {
 
     private static final String CATEGORY_CODE = "12";
+    private static final String SORTING_CODE = "product";
+
 
     @InjectMocks
     private DefaultProductFacade testedEntry;
@@ -35,22 +36,20 @@ public class DefaultProductFacadeTest {
     @Mock
     private ProductConverter productConverter;
     @Mock
-    private SortingData sortingData;
-    @Mock
     private SortingService sortingService;
+    @Mock
+    private Sorting sorting;
 
     @Test
-    public void shouldFindAllByCategoryId(){
-        List<Product> productList = Collections.singletonList(product);
-        List<ProductData> productDataList = Collections.singletonList(new ProductData());
+    public void shouldFindAllByCategoryId() {
+        List<Product> products = List.of(this.product);
+        List<ProductData> productDataList = List.of(new ProductData());
 
-        when(productService.findAllByCategory(CATEGORY_CODE, sortingData)).thenReturn(productList);
-        when(productConverter.convertAll(productList)).thenReturn(productDataList);
-        when(sortingService.getSorting(anyString(), anyString())).thenReturn(sortingData);
-        List<ProductData> result = testedEntry.findAllByCategory(CATEGORY_CODE, "price"
-                , "asc");
+        when(sortingService.find(SORTING_CODE)).thenReturn(Optional.of(sorting));
+        when(productService.findAllByCategory(CATEGORY_CODE, sorting)).thenReturn(products);
+        when(productConverter.convertAll(products)).thenReturn(productDataList);
+        List<ProductData> result = testedEntry.findAllByCategory(CATEGORY_CODE, SORTING_CODE);
 
-        assertArrayEquals(productDataList.toArray(), result.toArray());
-
+        assertEquals(productDataList, result);
     }
 }
